# softrender

./: CMakeLists.txt  README.md
softrender/: __tests.h  main.cpp
softrender/engine/: engine.cpp  engine.h  object.cpp  object.h  scene.cpp  scene.h  screen.cpp  screen.h
softrender/graphics/: core.cpp  core.h  enum.h  geometry.h  model.cpp  model.h  screen.cpp  screen.h  shaders.cpp  shaders.h
softrender/utils/: tgaimage.cpp  tgaimage.h  utils.h
